<resources>
    <string name="app_name">MyBankApp</string>
    <string name="main_toast_filter_coincidence">Совпадений по фильтрам не найдено</string>
    <string name="add_request_fragment_button_description">Заполните все поля и сделайте фото</string>
    <string name="main_toolbar_name">My bank aggregator</string>
    <string name="main_button_filter">Фильтры</string>
    <string name="main_button_requsts">Мои заявки</string>
    <string name="main_button_list">Список</string>
    <string name="add_request_fragment_create_request_button">Создать заявку</string>
    <string name="add_request_fragment_enter_time_editText">Введите срок в месяцах</string>
    <string name="add_request_fragment_enter_count_editText">Введите сумму кредита</string>
    <string name="add_request_fragment_header_textView">Заявка на получение кредита</string>
    <string name="add_request_fragment_enter_first_name_editText">Ваше имя</string>
    <string name="add_request_fragment_enter_second_name_editText">Ваша фамилия</string>
    <string name="add_request_fragment_enter_dad_name_editText">Ваше очество</string>
    <string name="add_request_fragment_enter_passport_number_editText">Серия и номер паспорта через пробел</string>
    <string name="add_request_fragment_nationality_switch">Гражданство РФ</string>
    <string name="add_request_fragment_personal_data_handler_checkBox">Согласие на обработку персональных данных</string>
    <string name="add_request_fragment_create_photo_button">Сделать фото</string>
    <string name="add_request_fragment_photo_description_textView">Для оформления заявки сделайте селфи с первым разворотом паспорта</string>
    <string name="filter_fragment_enter_city_editText">Город</string>
    <string name="filter_fragment_answer_yes_editText">Да</string>
    <string name="filter_fragment_answer_no_editText">Нет</string>
    <string name="filter_fragment_person_answer_editText">Для частных лиц</string>
    <string name="filter_fragment_legal_answer_editText">Для юр.лиц</string>
    <string name="filter_fragment_credit_card_group">Наличие кредитных карт</string>
    <string name="filter_fragment_debet_card_group">Наличие дебетовых карт</string>
    <string name="filter_fragment_credit_cash_group">Наличие кредита наличными</string>
    <string name="filter_fragment_mortgage_group">Наличие ипотечных займов</string>
    <string name="filter_fragment_deposit_group">Наличие депозитных вкладов</string>
    <string name="filter_fragment_investments_group">Наличие инвестиций</string>
    <string name="filter_fragment_insurance_group">Наличие страховых услуг</string>
    <string name="filter_fragment_foreigner_group">Обслуживание иностранных граждан</string>
    <string name="filter_fragment_accept_button">Применить</string>
    <string name="item_fragment_to_site_button">Перейти на сайт</string>
    <string name="item_fragment_to_map_button">Открыть на карте</string>
    <string name="item_fragment_license_textView">Лицензия №</string>
    <string name="item_fragment_ogrn_textView">ОГРН</string>
    <string name="item_fragment_adress_textView">Адрес</string>
    <string name="item_fragment_add_request_button">Создать заявку на кредит</string>
    <string name="request_list_adapter_mCount">Сумма: %d</string>
    <string name="request_list_adapter_bPercent">Процент: %d%%</string>
    <string name="request_list_adapter_requestNum">Заявка №</string>
    <string name="request_list_adapter_requestState">Статус: </string>
    <string name="request_list_adapter_monthlyPayment">Ежемесячный платеж:</string>
</resources>
