<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideInset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/city_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/filter_fragment_enter_city_editText"
                android:inputType="text" />

            <RadioGroup
                android:id="@+id/person_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/personal_radiobtn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:text="@string/filter_fragment_person_answer_editText" />

                    <RadioButton
                        android:id="@+id/legal_radiobtn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="15dp"
                        android:layout_weight="1"
                        android:text="@string/filter_fragment_legal_answer_editText" />

                </LinearLayout>
            </RadioGroup>

            <RadioGroup
                android:id="@+id/credit_card_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/creditCard_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_fragment_credit_card_group" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/creditCard_Y"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/filter_fragment_answer_yes_editText" />

                    <RadioButton
                        android:id="@+id/creditCard_N"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/filter_fragment_answer_no_editText" />
                </LinearLayout>
            </RadioGroup>

            <RadioGroup
                android:id="@+id/debit_card_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/debitCard_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_fragment_debet_card_group" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/debitCard_Y"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/filter_fragment_answer_yes_editText" />

                    <RadioButton
                        android:id="@+id/debitCard_N"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/filter_fragment_answer_no_editText" />
                </LinearLayout>
            </RadioGroup>

            <RadioGroup
                android:id="@+id/credit_cash_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/creditCash_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_fragment_credit_cash_group" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/creditCash_Y"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/filter_fragment_answer_yes_editText" />

                    <RadioButton
                        android:id="@+id/creditCash_N"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/filter_fragment_answer_no_editText" />
                </LinearLayout>
            </RadioGroup>

            <RadioGroup
                android:id="@+id/mortgage_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/mortgage_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_fragment_mortgage_group" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/mortgage_Y"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/filter_fragment_answer_yes_editText" />

                    <RadioButton
                        android:id="@+id/mortgage_N"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/filter_fragment_answer_no_editText" />
                </LinearLayout>
            </RadioGroup>

            <RadioGroup
                android:id="@+id/deposit_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/deposit_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_fragment_deposit_group" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/deposit_Y"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/filter_fragment_answer_yes_editText" />

                    <RadioButton
                        android:id="@+id/deposit_N"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/filter_fragment_answer_no_editText" />
                </LinearLayout>
            </RadioGroup>

            <RadioGroup
                android:id="@+id/investments_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/investments_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_fragment_investments_group" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/investments_Y"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/filter_fragment_answer_yes_editText" />

                    <RadioButton
                        android:id="@+id/investments_N"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/filter_fragment_answer_no_editText" />
                </LinearLayout>
            </RadioGroup>

            <RadioGroup
                android:id="@+id/insurance_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/insurance_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_fragment_insurance_group" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/insurance_Y"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/filter_fragment_answer_yes_editText" />

                    <RadioButton
                        android:id="@+id/insurance_N"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/filter_fragment_answer_no_editText" />
                </LinearLayout>
            </RadioGroup>

            <RadioGroup
                android:id="@+id/foreign_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/forForeign_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_fragment_foreigner_group" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/forForeign_Y"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/filter_fragment_answer_yes_editText" />

                    <RadioButton
                        android:id="@+id/forForeign_N"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/filter_fragment_answer_no_editText" />
                </LinearLayout>
            </RadioGroup>
            <Button
                android:id="@+id/acceptFilter_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/filter_fragment_accept_button" />
        </LinearLayout>
    </ScrollView>




</LinearLayout>